# Bootcamp-week

./: .gitignore  .jupyter_ystore.db  HELP.md  README.md  app.py  pyproject.toml
W5_NLP/: .gitignore  README.md  pyproject.toml
W5_NLP/M1/datasets/CVs/Topic_1/: 01_en.json  01_en.md  05_en.json  05_en.md  07.json  07.md  10.json  10.md  11.json  11.md  15.json  15.md  17.json  17.md  20.json  20.md  21.json  21.md  22.json  22.md  26.json  26.md  29.json  29.md  30.json  30.md  33.json  33.md  34.json  34.md  39.json  39.md  40.json  40.md
W5_NLP/M1/datasets/CVs/Topic_2/: 02_en.json  02_en.md  06_en.json  06_en.md  08.json  08.md  09.json  09.md  12.json  12.md  16.json  16.md  18.json  18.md  19.json  19.md  23.json  23.md  24.json  24.md  31.json  31.md  32.json  32.md  35.json  35.md  36.json  36.md  37.json  37.md  38.json  38.md
W5_NLP/M1/datasets/CVs/Topic_3/: 13.json  (+13 more)
W5_NLP/M1/sessions/: 01_intro.ipynb  02_corpus.ipynb  03_prep.ipynb  04_vectorization.ipynb  05_classifier_ex1.ipynb  06_classifier_ex2.ipynb  07_information_retrieval_ex.ipynb  08_topic_modeling_ex.ipynb
W5_NLP/M1/stretch/: 02_regex.ipynb  03_regex_ex.ipynb  TF_TFIDF_From_Scratch.ipynb
W5_NLP/M2/labs/C2_M3_Lab_1_basic_tokenization/: C2_M3_Lab_1_basic_tokenization.ipynb  helper_utils.py
W5_NLP/M2/labs/C2_M3_Lab_2_embeddings/: C2_M3_Lab_2_embeddings.ipynb  helper_utils.py
W5_NLP/M2/labs/C2_M3_Lab_4_finetuned_text_classifier/: C2_M3_Lab_4_finetuned_text_classifier.ipynb  helper_utils.py
W5_NLP/M2/lessons/: 01_M2_intro.ipynb
W5_NLP/M2/stretch/: RecSystems.ipynb  Solution_RecSystems.ipynb
(+58 files in other folders)
